footer overlaping issues fixed FAQ api integrate done in front end side and FAQ question and answer add etc..

--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -6,7 +6,7 @@
   /* padding: 10px 20px; */
   background-color: rgba(0, 0, 0, 0.3);
   gap: var(--gap);
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   left: 0;
   right: 0;
